fix: adjust padding in #app for improved layout on smaller screens

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,7 +8,6 @@
 
 @media screen and (max-width: 905px) {
   #app {
-    padding: 20px;
-    padding-top: 80px;
+    padding: 0 20px;
   }
 }
